--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -6,6 +6,7 @@
   "100": "User is already existed, please login.",
   "998": "server error",
   "999": "NETWOEK ERROR",
+
   "sign_up": "SIGN UP",
   "firstName": "First Name",
   "lastName": "Last Name",
@@ -17,5 +18,17 @@
   "validation_text": "{{key}} is not correct.",
   "go_sign_in_text": "Already have an account? Sign in",
   "go_forget_password_text": "Forgot password?",
-  "go_sign_up_text": "Don't have an account? Sign Up"
+  "go_sign_up_text": "Don't have an account? Sign Up",
+
+  "send_notification_success": "Send code success, please check your mail",
+  "send_notification_fail": "Send code failde, please wait for a minute to try it again.",
+  "first_name_not_null": "Please input first name.",
+  "last_name_not_null": "Please input last name.",
+  "password_not_null": "Please input password.",
+  "code_not_null": "Please input validate code.",
+  "mail_not_null": "Please input mail.",
+  "mail_check": "Mail address format is not correct!",
+  "mail_error": "Mail address is not correct!",
+  "max_20": "too long!",
+  "password_check": "A password contains at least eight characters, including at least one number and includes both lower and uppercase letters."
 }
