--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,6 +8,7 @@
   "999": "NETWOEK ERROR",
 
   "sign_up": "SIGN UP",
+  "sign_in": "SIGN IN",
   "firstName": "First Name",
   "lastName": "Last Name",
   "mail_address": "Email Address",
