--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -7,6 +7,8 @@
   "998": " SERVER ERROR",
   "999": "NETWOEK ERROR",
 
+  "sign_up": "登 録",
+  "sign_in": "ログイン",
   "firstName": "名",
   "lastName": "姓",
   "mail_address": "メールアドレス",
@@ -14,7 +16,6 @@
   "verification_code": "認証番号",
   "send_code": "番号発送",
   "wait_text": " {{count}} 秒待つ",
-  "sign_up": "登 録",
   "go_sign_in_text": "登録ページへ",
   "go_forget_password_text": "パスワードを忘れました?",
   "go_sign_up_text": "今登録します！",
