--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,15 +4,21 @@
   "003": "VERIFICATION CODE is not existed",
   "004": "VERIFICATION CODE is not correct!",
   "100": "User is already existed, please login.",
+  "101": "User is not existed, please sign up",
   "998": "server error",
   "999": "NETWOEK ERROR",
 
   "sign_up": "SIGN UP",
   "sign_in": "SIGN IN",
+  "reset_password": "RESET PASSWORD",
+  "resume_repository": "Resume Repository",
+  "new_resume": "New Resume",
+  "auth_setting": "Auth Setting",
   "firstName": "First Name",
   "lastName": "Last Name",
   "mail_address": "Email Address",
   "password": "password",
+  "new_password": "New Password",
   "verification_code": "verification code",
   "send_code": "send code",
   "wait_text": "WAIT {{count}} Sec",
