--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -4,26 +4,33 @@
   "003": "認証番号は存在しません",
   "004": "認証番号は正しくない!",
   "100": "ユーザーは既に存在します。ログインしてください。",
+  "101": "ユーザーは存在しません。登録してください。",
   "998": " SERVER ERROR",
   "999": "NETWOEK ERROR",
 
   "sign_up": "登 録",
   "sign_in": "ログイン",
+  "reset_password": "リセット パスワード",
+  "resume_repository": "職務経歴書リポジトリ",
+  "new_resume": "職務経歴書作成",
+  "auth_setting": "権限设定",
   "firstName": "名",
   "lastName": "姓",
   "mail_address": "メールアドレス",
   "password": "パスワード",
+  "new_password": "新しいパスワード",
   "verification_code": "認証番号",
   "send_code": "番号発送",
   "wait_text": " {{count}} 秒待つ",
-  "go_sign_in_text": "登録ページへ",
+  "validation_text": "{{key}} は正しくない。",
+  "go_sign_in_text": "ログインページへ",
   "go_forget_password_text": "パスワードを忘れました?",
   "go_sign_up_text": "今登録します！",
 
   "send_notification_success": "認証番号発送成功しました, メールボックスでご確認ください",
   "send_notification_fail": "認証番号発送失敗しました",
-  "first_name_not_null": "名（氏名）を入力してください",
-  "last_name_not_null": "姓（氏名）を入力してください",
+  "first_name_not_null": "名を入力してください",
+  "last_name_not_null": "姓を入力してください",
   "password_not_null": "パスワードを入力してください",
   "code_not_null": "認証番号を入力してください",
   "mail_not_null": "メールアドレスを入力してください",
