--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -4,18 +4,25 @@
   "003": "请重新发送验证码",
   "004": "验证码不正确!",
   "100": "用户已存在",
+  "101": "用户不存在，请先注册用户",
   "998": "服务器异常",
   "999": "网络异常",
 
   "sign_up": "注 册",
   "sign_in": "登 陆",
+  "reset_password": "密码重置",
+  "resume_repository": "简历仓库",
+  "new_resume": "简历作成",
+  "auth_setting": "权限设置",
   "firstName": "名",
   "lastName": "姓",
   "mail_address": "电子邮箱地址",
   "password": "密码",
+  "new_password": "新密码",
   "verification_code": "验证码",
   "send_code": "发送验证码",
   "wait_text": "{{count}} 秒后",
+  "validation_text": "{{key}} 不满足要求",
   "go_sign_in_text": "已有账号，前往登陆页面",
   "go_forget_password_text": "忘记密码了?",
   "go_sign_up_text": "没有账号，现在注册！",
